@@ -1,5 +1,9 @@
 2006-02-21  Andrew Stubbs  <andrew.stubbs@st.com>
 
+	* gdb.base/help.exp (help add-symbol-file): Update.
+
+2006-02-21  Andrew Stubbs  <andrew.stubbs@st.com>
+
 	* gdb.base/help.exp (help load): Update expected results.
 
 2006-02-19  Fred Fish  <fnf@specifix.com>
